Generics/Code3_error_report.txt
javac errors for Code3.java 
Code3.java:23: error: method foo in class Code3 cannot be applied to given types;
        foo(src, big, small); // Error: Incompatible types
        ^
  required: List<T>,List<T>,List<T>
  found: List<Number>,List<Integer>,List<Double>
  reason: inferred type does not conform to equality constraint(s)
    inferred: Double
    equality constraints(s): Double,Integer,Number
  where T is a type-variable:
    T extends Object declared in method <T>foo(List<T>,List<T>,List<T>)
1 error
 
============================================================================= 
ExtendJ errors for Code3.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code3.java:23: error: no method named foo(java.util.List<java.lang.Number>, java.util.List<java.lang.Integer>, java.util.List<java.lang.Double>) in Generics.Code3 matches. However, there is a method foo(java.util.List<T>, java.util.List<T>, java.util.List<T>)
 
============================================================================= 
Eclipse ECJ errors for Code3.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code3.java (at line 23)
	foo(src, big, small); // Error: Incompatible types
	^^^
The method foo(List<T>, List<T>, List<T>) in the type Code3 is not applicable for the arguments (List<Number>, List<Integer>, List<Double>)
----------
1 problem (1 error)
